@startuml dp2-observer
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 0
skinparam linetype polyline
skinparam nodesep 26
skinparam ranksep 42
skinparam defaultFontName "Helvetica Neue"
skinparam defaultFontSize 13
skinparam dpi 150
skinparam class {
  BackgroundColor #FFFFCE
  BorderColor #000000
  BorderThickness 1
  ArrowColor #000000
  ArrowThickness 1
  FontColor #000000
  FontName "Helvetica Neue"
  AttributeFontColor #000000
  AttributeFontName "Helvetica Neue"
  StereotypeFontColor #000000
}
skinparam note {
  BackgroundColor #FFFFFF
  BorderColor #777777
  FontColor #000000
}

title DP#3 Observer Pattern (pull) - Subject = EventPublisher
class EventPublisher <<Subject>> {
  -observers: List<EventListener>
  --
  +attach(observer: EventListener): void
  +detach(observer: EventListener): void
  +subscriberCount(): int
  +notifyObservers(): void
}
interface EventListener <<Observer>> {
  +update(): void
}
class TicketPurchasePublisher <<ConcreteSubject>> {
  -subjectState: TicketIssuedEvent
  --
  +getState(): TicketIssuedEvent
  +setState(event: TicketIssuedEvent): void
  +publishTicketIssued(reservation: Reservation, ticket: Ticket, req: BusTicketRequest): void
  +publishTicketIssued(reservation: Reservation, ticket: Ticket, busCity: BusCity): void
}
class BusTicketPurchaseListener <<ConcreteObserver>> {
  -busTicketingService: BusTicketingService
  -subject: TicketPurchasePublisher
  --
  +BusTicketPurchaseListener(busTicketingService: BusTicketingService)
  +setSubject(subject: TicketPurchasePublisher): void
  +getSubject(): TicketPurchasePublisher
  +update(): void
}
' ── linked bus shuttle issuance domain (BusTicketPurchaseListener collaboration) ──
class BusTicketingService {
  -schedulesByCity: Map<BusCity, List<BusSchedule>>
  -issuedTickets: List<BusTicket>
  --
  +issuePremiumTicket(reservation: Reservation, ticket: Ticket, city: BusCity, schedule: BusSchedule, seat: BusSeat): BusTicket
  +supportedCities(): List<BusCity>
  +schedulesFor(city: BusCity): List<BusSchedule>
}
class BusTicket {
  -ticketNumber: String
  -originCity: BusCity
  -schedule: BusSchedule
  -seat: BusSeat
  -fare: long
  --
  +issue(reservationPnr, airTicketNumber, passengerName, originCity, schedule, seat): BusTicket
}
class BusTicketRequest {
  -originCity: BusCity
  -schedule: BusSchedule
  -seat: BusSeat
  --
  +getOriginCity(): BusCity
  +getSchedule(): BusSchedule
  +getSeat(): BusSeat
}
class BusCity {
  -displayName: String
  -cityCode: String
  -premiumFare: long
}
class BusSchedule {
  -scheduleId: String
  -originCity: BusCity
  --
  +availableSeats(): List<BusSeat>
}
class BusSeat {
  -seatNumber: String
  -windowSeat: boolean
  -aisleSeat: boolean
}

EventPublisher <|-- TicketPurchasePublisher
EventListener <|.. BusTicketPurchaseListener
EventPublisher o--> "*" EventListener : -observers
BusTicketPurchaseListener -right-> TicketPurchasePublisher : -subject
' bus issuance chain: e-Ticket issued event → linked shuttle ticket
BusTicketPurchaseListener --> BusTicketingService : -busTicketingService
BusTicketingService ..> BusTicket : <<create>>
TicketPurchasePublisher ..> BusTicketRequest : carried in TicketIssuedEvent
BusTicketRequest --> BusSchedule
BusTicketRequest --> BusSeat
BusTicket --> BusCity
BusSchedule --> BusCity
note bottom
  4 ConcreteSubjects (TicketPurchasePublisher, FlightSchedule, SeatHoldMonitor,
  PaymentProcessor) and 4 ConcreteObservers (BusTicketPurchaseListener,
  AffectedReservationListener, ReservationHoldListener, ReservationAutoCancelListener)
  all share the same attach / notifyObservers() / update() pull structure;
  a representative ConcreteSubject + ConcreteObserver pair is shown above.
end note
@enduml
